Update title and sound indicator in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ghanti - Interactive Bell</title>
+    <title>Jaya Ghanti</title>
     <style>
         * {
             margin: 0;
@@ -170,9 +170,9 @@
         <div class="white-circle" id="bell">
             <div class="bell-icon" id="bellIcon">🔔</div>
         </div>
-        <div class="sound-indicator" id="soundIndicator">🔊</div>
+        <div class="sound-indicator" id="soundIndicator">🔔</div>
     </div>
-    <div class="info-text" id="infoText">Click the bell to ring</div>
+    <div class="info-text" id="infoText">Jaya Ghanti</div>
 
     <script>
         class BellApp {
