Change audio info text from 'Enable audio first' to 'Jaya Ghanti'

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
             async playSounds() {
                 if (!this.audioInitialized || !this.audioContext) {
-                    this.infoText.textContent = 'Enable audio first';
+                    this.infoText.textContent = 'Jaya Ghanti';
                     return;
                 }
 
